@@ -1,4 +1,5 @@
 1.9.2
+* Client: show progess of loading/saving balance of P2KH/P2SH addresses
 * Client: removed "config.Beeps" and all the related beeping functionality
 * Client/WebUI/Blocks: transactions in the fee stats can be grouped now to smooth the graph
 * Client: fee stats fpor WebUI/Blocks are being saved now
